%% Mermaid Class Diagram for MyanMyanLearn
classDiagram
  direction LR

  %% Models / Entities
  class Course {
    +String id
    +String title
    +String description
    +String logo
    +List<Content> contents
  }

  class Content {
    +int order
    +String chapter
    +String title
    +List<Subcontent> subcontents
  }

  class Subcontent {
    +int order
    +String title
    +String markdownPath
  }

  class Question {
    +String courseId
    +String chapterId
    +int questionNumber
    +String questionContentPath
    +int correctOptionIndex
    +float marks
    +int slotCount
    +String explanation
    +List<QuestionOption> options
    +List<List<QuestionOption>> slotOptions
  }

  class QuestionOption {
    +int optionIndex
    +String optionContent
    +boolean isCorrect
  }

  class Member {
    +String userId
    +Boolean active
    +String email
    +Boolean emailVerified
    +String firstName
    +String lastName
    +String otpCode
    +LocalDateTime otpExpiresAt
    +String pw
    +String profileImage
  }

  %% Repository
  class MemberRepository {
  }
  <<interface>> MemberRepository

  %% Service
  class CourseService {
    +List<Course> getAllCourses()
    +Course findById(id)
    +Course findByTitle(title)
  }

  %% Controllers
  class HomeController {
    +String homePage(Model)
  }

  class ContentsController {
    +String contents(Model, String courseId, String selected, String title)
  }

  class AssessmentController {
    +String assessmentPage(Model, String chapters, String courseId)
    +String assessmentScorePage(Model, String chapters, String courseId, Map allParams)
  }

  %% Data Source
  class QuestionDataSource {
    +static List<Question> getSampleQuestions()
    +static Question createQuestion(...)
    +static Question createCustomQuestion(...)
  }

  %% Relationships
  Course "1" --> "0..*" Content : contents
  Content "1" --> "0..*" Subcontent : subcontents
  Question "1" --> "0..*" QuestionOption : options/slotOptions

  MemberRepository --> Member : manages
  
  HomeController --> CourseService : uses
  HomeController --> MemberRepository : uses
  
  ContentsController --> CourseService : uses
  
  AssessmentController --> CourseService : uses
  AssessmentController --> QuestionDataSource : uses
  QuestionDataSource ..> Question : creates

  %% Additional Models / Entities
  class CourseCatalog {
    +List<Course> courses
  }

  class OtpVerification {
    +Long id
    +String userId
    +String email
    +String otpCode
    +LocalDateTime createdAt
    +LocalDateTime expiresAt
    +Boolean verified
    +LocalDateTime verifiedAt
    +Integer attempts
  }

  class Role {
    +String userId
    +String role
  }

  class RoleId {
    +String userId
    +String role
  }
